Fixed styling issue on mobile causing embedded videos to not show

--- a/style.css
+++ b/style.css
@@ -316,7 +316,7 @@ a
 
   .video-reel
   {
-    padding:0 0 0 0;
+    padding: 56.25% 0 0 0;
     position: relative;
   }
 
